--- a/src/components/Auth/Profile/style.scss
+++ b/src/components/Auth/Profile/style.scss
@@ -1,3 +1,17 @@
 .client-profile-container {
   padding: 16px;
 }
+
+.client-profile-text-muted {
+  color: #666;
+}
+
+.client-profile-text-secondary {
+  color: #888;
+  font-size: 13px;
+}
+
+.client-profile-text-meta {
+  color: #aaa;
+  font-size: 12px;
+}
