--- a/src/components/Client/home/style.scss
+++ b/src/components/Client/home/style.scss
@@ -288,18 +288,18 @@
             margin-left: 10px;
             font-size: 15px;
             font-family: "Inter", sans-serif;
-            font-weight: 400;
-            color: #4a4a4a;
+            font-weight: 500;
+            color: #111827;
             .number-index {
               margin-bottom: 0px;
               font-size: 20px;
-              color: #4d4d4d;
+              color: #111827;
               font-weight: 700;
             }
             .number-desc {
               font-size: 13px;
-              color: #80807f;
-              font-weight: 400;
+              color: #4b5563;
+              font-weight: 500;
             }
           }
         }
