--- a/src/components/Client/Course/style.scss
+++ b/src/components/Client/Course/style.scss
@@ -274,6 +274,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
+    padding: 60px 0;
   }
   // Remove old classes
   .card-header,
