--- a/src/components/Client/Blog/style.scss
+++ b/src/components/Client/Blog/style.scss
@@ -371,3 +371,12 @@
     }
   }
 }
+@media (max-width: 992px) {
+  .blog-page{
+    .blog-main{
+      .posts-grid{
+        grid-template-columns: repeat(1, 1fr);
+      }
+    }
+  }
+}
