--- a/src/components/Client/Margin/style.scss
+++ b/src/components/Client/Margin/style.scss
@@ -437,7 +437,7 @@
 
 @media (max-width: 768px) {
   .margin__container {
-    padding: 0 20px;
+    padding: 10px;
     margin-top: 40px;
 
     .margin__content {
@@ -458,6 +458,14 @@
         justify-content: center;
         margin-bottom: 30px;
       }
+    }
+  }
+}
+@media (max-width: 992px) {
+  .questions-section{
+    .questions-header{
+      flex-direction: column;
+      gap: 20px;
     }
   }
 }
